--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,4 +33,4 @@ jobs:
           parse-json: true
 
       - name: Check if env variable is set after fetching secrets
-        run: if [ -z ${SYNDIO+x} ]; then echo "TEST is unset"; else echo "TEST is set to '$SYNDIO'"; fi
+        run: if [ -z ${SYNDIO/PASSWORD+x} ]; then echo "TEST is unset"; else echo "TEST is set to '$SYNDIO/PASSWORD'"; fi
